Import of DOLMEN/Win32-App-which-1.00 from CPAN.
gitpan-cpan-distribution: Win32-App-which
gitpan-cpan-version:      1.00
gitpan-cpan-path:         DOLMEN/Win32-App-which-1.00.tar.gz
gitpan-cpan-author:       DOLMEN
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -16,7 +16,7 @@ name: Win32-App-which
 provides:
   Win32::App::which:
     file: lib/Win32/App/which.pm
-    version: 0.01
+    version: 1.00
 resources:
-  license: http://dev.perl.org/licenses/
-version: 0.01
+  license: http://www.gnu.org/licenses/gpl-3.0.html
+version: 1.00
