--- a/META.yml
+++ b/META.yml
@@ -7,7 +7,7 @@ build_requires:
 configure_requires:
   Module::Build: 0.3800
 dynamic_config: 0
-generated_by: 'Module::Build version 0.38, CPAN::Meta::Converter version 2.110580'
+generated_by: 'Module::Build version 0.38, CPAN::Meta::Converter version 2.112150'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -16,7 +16,10 @@ name: Win32-App-which
 provides:
   Win32::App::which:
     file: lib/Win32/App/which.pm
-    version: 1.02
+    version: 1.021
+requires:
+  perl: 5.006
 resources:
   license: http://www.gnu.org/licenses/gpl-3.0.html
-version: 1.02
+  repository: https://github.com/dolmen/p5-Win32-App-which.git
+version: 1.021
